--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "dependencies": {
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1"
+    "babel-preset-react": "^6.11.1",
+
+    "jquery"  : "3.0.0-beta1",
+    "underscore"  : "1.8.3",
+
+    "react": "15.3.0",
+    "react-dom": "15.3.0",
+    "react-router": "2.6.1"
   }
 }
