--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 
     "react": "15.3.0",
     "react-dom": "15.3.0",
-    "react-router": "2.6.1"
+    "react-router": "2.6.1",
+
+    "revore-server": "1.0.8"
   }
 }
