--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "15.3.0",
     "react-router": "2.6.1",
 
-    "revore-server": "1.0.8"
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1"
   }
 }
